add space below title in bo-x-ewts (#1072)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6170,6 +6170,10 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
    padding-top:40px;
 }
 
+.etext-header:not(.sticky) h2[lang="bo-x-ewts"]:not(:last-child) {
+   margin-bottom:30px;
+}
+
 
 .etext-nav-parent.someClass .etext-header.sticky {
    max-width:calc(100% - 200px);
