minor css fixes (#1080) + WIP: search results when etext unformatted (#1081)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5276,7 +5276,7 @@ line-height:12px; }
 
 :not(.preview-etext) #etext-scroll.has-no-pages:not(#a) .etextPage { border:none; }
 
-:not(.preview-etext) .resource.etext-view #etext-scroll > :first-child { border-bottom:1px solid #999; margin-bottom:25px; }
+:not(.preview-etext) .resource.etext-view #etext-scroll.has-no-pages > :first-child { border-bottom:1px solid #999; margin-bottom:25px; }
 
 :not(.preview-etext) > div > .etext-view:not(#a) .unformatted:not(.hasSeq):not(#a),
 :not(.preview-etext) > div > .etext-view .unformatted:not(.hasSeq) :not(:empty) { display: inline; }
